fix: change color on small mobile phone

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -749,7 +749,7 @@ img {
     margin-bottom: 2.4rem; }
   .types__section {
     margin: 7.142rem 0rem 3.25rem 0rem; }
-  .section-title__heading {
+  .section-title__heading--white {
     color: #fff;
     font-size: 22px; }
   .page-subtitle__text--white {
